--- a/Exercici.1/styles/sass/style.scss
+++ b/Exercici.1/styles/sass/style.scss
@@ -5,5 +5,56 @@ body{
     width: 100vw;
     background:black;
     border: 10px solid orange;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 }
-       
+.container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+.boton{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+    .btn{
+        height: 15%;
+        width: 20%;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        color: white;
+        background-color: orange;
+        border-radius: 20px;
+        text-decoration: none;
+        font-family: 'Cabin', sans-serif;
+        font-size: 25px;
+    }
+.respuesta{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+    .texto{
+        height: 80%;
+        width: 80%;
+        color: white;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+
+    }
