--- a/Exercici.1/styles/css/style.css
+++ b/Exercici.1/styles/css/style.css
@@ -58,8 +58,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   height: 100vh;
   width: 100vw;
-  background: black;
-  border: 10px solid orange;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
@@ -72,9 +70,11 @@ body {
           align-items: center;
 }
 
-.container {
+.contenedor {
   height: 100%;
   width: 100%;
+  background: black;
+  border: 15px solid orange;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,31 +106,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.btn {
-  height: 15%;
-  width: 20%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-  color: white;
-  background-color: orange;
-  border-radius: 20px;
-  text-decoration: none;
-  font-family: 'Cabin', sans-serif;
-  font-size: 25px;
 }
 
 .respuesta {
