--- a/Exercici.1/styles/sass/style.scss
+++ b/Exercici.1/styles/sass/style.scss
@@ -3,15 +3,15 @@
 body{
     height: 100vh;
     width: 100vw;
-    background:black;
-    border: 10px solid orange;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
 }
-.container{
+.contenedor{
     height: 100%;
     width: 100%;
+    background:black;
+    border: 15px solid orange;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -25,21 +25,6 @@ body{
     justify-content: center;
     align-items: center;
 }
-    .btn{
-        height: 15%;
-        width: 20%;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        color: white;
-        background-color: orange;
-        border-radius: 20px;
-        text-decoration: none;
-        font-family: 'Cabin', sans-serif;
-        font-size: 25px;
-    }
 .respuesta{
     height: 50%;
     width: 100%;
