--- a/Exercici.1/styles/css/style.css
+++ b/Exercici.1/styles/css/style.css
@@ -73,8 +73,8 @@ body {
 .contenedor {
   height: 100%;
   width: 100%;
-  background: black;
-  border: 15px solid orange;
+  background: #eeebdd;
+  border: 15px solid #810000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,7 +129,9 @@ body {
 .texto {
   height: 80%;
   width: 80%;
-  color: white;
+  color: #810000;
+  font-size: 35px;
+  font-weight: bold;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -143,5 +145,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 10%;
 }
 /*# sourceMappingURL=style.css.map */
