--- a/Exercici.1/styles/sass/style.scss
+++ b/Exercici.1/styles/sass/style.scss
@@ -10,8 +10,8 @@ body{
 .contenedor{
     height: 100%;
     width: 100%;
-    background:black;
-    border: 15px solid orange;
+    background:#eeebdd;
+    border: 15px solid #810000;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -36,10 +36,12 @@ body{
     .texto{
         height: 80%;
         width: 80%;
-        color: white;
+        color: #810000;
+        font-size: 35px;
+        font-weight:bold;
         display: flex;
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
-
+        padding-bottom: 10%;
     }
