--- a/Exercici.1/styles/sass/style.scss
+++ b/Exercici.1/styles/sass/style.scss
@@ -18,6 +18,7 @@ body{
     align-items: center;
 }
 .boton{
+    color: #810000;
     height: 50%;
     width: 100%;
     display: flex;
@@ -25,6 +26,14 @@ body{
     justify-content: center;
     align-items: center;
 }
+    div.button{
+        width: 80px;
+        height: 80px;
+        color: #810000;
+        border-radius: 40px;
+        background-color: black;
+        border: 2px solid yellowgreen;
+    }
 .respuesta{
     height: 50%;
     width: 100%;
