--- a/Exercici.2/styles/sass/style.scss
+++ b/Exercici.2/styles/sass/style.scss
@@ -25,6 +25,14 @@ body{
     justify-content: center;
     align-items: center;
 }
+.button{
+    width: 150px;
+    height: 150px;
+    color: #810000;
+    border-radius: 75px;
+    background-color: black;
+    border: 2px solid yellowgreen;
+}
 .respuesta{
     height: 50%;
     width: 100%;
