--- a/Exercici.2/styles/css/style.css
+++ b/Exercici.2/styles/css/style.css
@@ -108,6 +108,15 @@ body {
           align-items: center;
 }
 
+.button {
+  width: 150px;
+  height: 150px;
+  color: #810000;
+  border-radius: 75px;
+  background-color: black;
+  border: 2px solid yellowgreen;
+}
+
 .respuesta {
   height: 50%;
   width: 100%;
