--- a/Exercici.2/styles/sass/style.scss
+++ b/Exercici.2/styles/sass/style.scss
@@ -1,55 +1,66 @@
 @import "reset";
 
+@mixin diana ($width,$height,$border-radius,$background-color){
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: $width;
+    height: $height;
+    border-radius: $border-radius;
+    background-color: $background-color;
+}
+
+@mixin movimiento{
+    position: relative;
+    animation-name: animacion;
+    animation-duration: 20s;
+    animation-direction: normal;
+    animation-iteration-count: infinite;
+}
+
 body{
     height: 100vh;
     width: 100vw;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
 }
-.contenedor{
-    height: 100%;
-    width: 100%;
-    background:#eeebdd;
-    border: 15px solid #810000;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-}
-.boton{
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-}
-.button{
-    width: 150px;
-    height: 150px;
-    color: #810000;
-    border-radius: 75px;
-    background-color: black;
-    border: 2px solid yellowgreen;
-}
-.respuesta{
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-}
-    .texto{
-        height: 80%;
-        width: 80%;
-        color: #810000;
-        font-size: 35px;
-        font-weight:bold;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 10%;
+    .contenedor{
+        height: 100%;
+        width: 100%;
+        background:#eeebdd;
+        border: 15px solid #810000;
+        background-image: url(../../img/imgFondo.png);
+        background-repeat: no-repeat;
+        background-size: contain;
     }
+
+        .respuesta{
+            height: 80%;
+            width: 50%;
+            display: flex;
+        }
+            .texto{
+                height: 80%;
+                width: 80%;
+                color: #810000;
+                font-size: 35px;
+                font-weight:bold;
+                padding-bottom: 10%;
+            }
+
+
+                .button{
+                    @include diana (150px,150px,75px,#cf0000);
+                    @include movimiento;
+                }
+                .btn1{
+                    @include diana (100px,100px,50px,white);
+                }
+                .btn2{
+                    @include diana (50px,50px,25px,#cf0000);
+                }
+
+        @keyframes animacion{
+            0% {left: 50vw; top: calc(0vh - 150px); animation-timing-function: ease-in;}
+            100% {left: 50vw; top: calc(100vh - 170px); animation-timing-function: ease-in;}
+        }       
+
