--- a/Exercici.2/styles/sass/style.scss
+++ b/Exercici.2/styles/sass/style.scss
@@ -23,6 +23,7 @@ body{
     height: 100vh;
     width: 100vw;
 }
+
     .contenedor{
         height: 100%;
         width: 100%;
@@ -31,22 +32,31 @@ body{
         background-image: url(../../img/imgFondo.png);
         background-repeat: no-repeat;
         background-size: contain;
+        background-attachment: fixed;
+        background-position: bottom left;
     }
 
         .respuesta{
             height: 80%;
-            width: 50%;
+            width: 95%;
             display: flex;
+            flex-flow: nowrap;
+            justify-content: flex-end;
+            align-items: center;
+
         }
             .texto{
-                height: 80%;
-                width: 80%;
+                height: 100%;
+                width: 40%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 color: #810000;
                 font-size: 35px;
                 font-weight:bold;
                 padding-bottom: 10%;
+                z-index: 100;
             }
-
 
                 .button{
                     @include diana (150px,150px,75px,#cf0000);
