--- a/Exercici.2/styles/css/style.css
+++ b/Exercici.2/styles/css/style.css
@@ -58,6 +58,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   height: 100vh;
   width: 100vw;
+  cursor: url(../../img/fistAmarillo.png), auto;
 }
 
 .contenedor {
@@ -128,8 +129,8 @@ body {
   position: relative;
   -webkit-animation-name: animacion;
           animation-name: animacion;
-  -webkit-animation-duration: 20s;
-          animation-duration: 20s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
   -webkit-animation-direction: normal;
           animation-direction: normal;
   -webkit-animation-iteration-count: infinite;
