--- a/Exercici.1/styles/css/style.css
+++ b/Exercici.1/styles/css/style.css
@@ -58,6 +58,9 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   height: 100vh;
   width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column wrap;
