--- a/Exercici.2/styles/sass/style.scss
+++ b/Exercici.2/styles/sass/style.scss
@@ -65,6 +65,13 @@ body{
         @include fondo;
         }
 
+        .alert {
+            width:95%;
+            z-index: 100;
+            position:absolute;
+            
+         }
+
         .respuesta{
             height: 60%;
             width: 95%;
