--- a/Exercici.2/styles/sass/style.scss
+++ b/Exercici.2/styles/sass/style.scss
@@ -65,6 +65,10 @@ body{
         @include fondo;
         }
 
+        .centrarAlert{
+        @include flexbox(nowrap, center, center);
+        }
+
         .alert {
             width:95%;
             z-index: 100;
